2012-04-02: version 1.0.0
-------------------------

	* MySQL connection errors weren't logged (bug 958782).
	* The pmp-check-mysql-deadlocks referred to pt-heartbeat (bug 934255).

2012-02-16: version 0.9.0
-------------------------

	* Initial release. Not backwards compatible with Better Cacti Templates.