@@ -913,12 +913,13 @@ function apache_cachefile ( $options ) {
 }
 
 function apache_cmdline ( $options ) {
-   global $status_server, $status_url, $http_user, $http_pass, $http_port;
+   global $status_server, $status_url, $http_user, $http_pass, $http_port, $use_ssh;
+   $use_ssh = isset($options['use-ssh']) ? $options['use-ssh'] : $use_ssh;
    $srv = $status_server;
    if ( isset($options['server']) ) {
       $srv = $options['server'];
    }
-   elseif ( ! $options['use-ssh'] ) {
+   elseif ( ! $use_ssh ) {
       $srv = $options['host'];
    }
    $url = isset($options['url'])    ? $options['url']    : $status_url;
@@ -999,18 +1000,19 @@ function nginx_cachefile ( $options ) {
 }
 
 function nginx_cmdline ( $options ) {
-   global $status_server, $status_url, $http_user, $http_pass;
+   global $status_server, $status_url, $http_user, $http_pass, $http_port, $use_ssh;
+   $use_ssh = isset($options['use-ssh']) ? $options['use-ssh'] : $use_ssh;
    $srv = $status_server;
    if ( isset($options['server']) ) {
       $srv = $options['server'];
    }
-   elseif ( ! $options['use-ssh'] ) {
+   elseif ( ! $use_ssh ) {
       $srv = $options['host'];
    }
    $url = isset($options['url'])    ? $options['url']    : $status_url;
    $user = isset($options['http-user'])     ? $options['http-user']     : $http_user;
    $pass = isset($options['http-password']) ? $options['http-password'] : $http_pass;
-   $port = isset($options['port2']) ? ":$options[port2]" : '';
+   $port = isset($options['port2']) ? ":$options[port2]" : ":$http_port";
    $auth = ($user ? "--http-user=$user" : '') . ' ' . ($pass ? "--http-password=$pass" : '');
    return "wget $auth -U Cacti/1.0 -q -O - -T 5 \"http://$srv$port$url?auto\"";
 }
