@@ -3,6 +3,7 @@
 
 	* MySQL connection errors weren't logged (bug 958782).
 	* The pmp-check-mysql-deadlocks referred to pt-heartbeat (bug 934255).
+	* HTTP status was not fetched correctly when $use_ssh was disabled (bug 937017).
 
 2012-02-16: version 0.9.0
 -------------------------
